@@ -16,10 +16,8 @@
   \itemize{
     \item Plot the \code{"fitted"} component means (of selected units)
     along time along with the observed counts.
-    \item Plot the estimated \code{"season"}ality of the three
-    components and the dominant eigenvalue of the epidemic components.
-    \item Plot the complete time course of the \code{"maxEV"} (to be used
-    if the neighbourhood component contains time-varying weights).
+    \item Plot the estimated \code{"season"}ality of the three components.
+    \item Plot the time-course of the dominant eigenvalue \code{"maxEV"}.
     \item If the units of the corresponding multivariate
     \code{"\linkS4class{sts}"} object represent different regions, a map
     of estimated region-specific intercepts (\code{"ri"}) of a selected
@@ -48,13 +46,13 @@ plotHHH4_fitted1(x, unit = 1, main = NULL,
                  hide0s = FALSE, meanHHH = NULL)
 
 plotHHH4_season(...,
-                components=c("ar", "ne", "end", "maxEV"),
-                xlim=NULL, ylim=NULL,
-                xlab=NULL, ylab="", main=NULL,
+                components = c("ar", "ne", "end"), intercept = FALSE,
+                xlim = NULL, ylim = NULL,
+                xlab = NULL, ylab = "", main = NULL,
                 par.settings = list(), matplot.args = list(),
                 legend = NULL, legend.args = list(),
                 refline.args = list(), unit = 1)
-getMaxEV_season(x, unit = 1)
+getMaxEV_season(x)
 
 plotHHH4_maxEV(...,
                matplot.args = list(), refline.args = list(),
@@ -76,7 +74,8 @@ plotHHH4_neweights(x, plotter = boxplot, ...,
     \code{"season"}ality plots of the model components and the epidemic
     dominant eigenvalue (which may also be plotted along overall time by
     \code{type="maxEV"}, especially if the model contains time-varying
-    neighbourhood weights), or a map of estimated region-specific random
+    neighbourhood weights or unit-specific epidemic effects),
+    or a map of estimated region-specific random
     intercepts (\code{"ri"}) of a specific model \code{component}.
     The latter requires the model \code{x} to contain the selected
     random intercepts, and \code{x$stsObj} to contain a map.}
@@ -92,7 +91,7 @@ plotHHH4_neweights(x, plotter = boxplot, ...,
     \code{plotter}.}
   \item{units,unit}{integer or character vector specifying a single
     \code{unit} or possibly multiple \code{units} to plot.
-    It indexes \code{colnames(x$stsObj)}. In the seasonality functions,
+    It indexes \code{colnames(x$stsObj)}. In the seasonality plot,
     selection of a unit is only relevant if the model contains
     unit-specific intercepts or seasonality terms.}
   \item{names,main}{main title(s) for the selected
@@ -147,7 +146,14 @@ plotHHH4_neweights(x, plotter = boxplot, ...,
   \item{components}{vector of components for which to plot estimated
     seasonality. Additionally, a seasonality plot of the dominant
     eigenvalue of the epidemic components is available
-    (\code{"maxEV"}).}
+    (\code{"maxEV"}), which only supports models without
+    covariates/offsets in the epidemic components.}
+  \item{intercept}{logical indicating whether to plot seasonality as a
+    multiplicative effect on the respective component (the default
+    \code{intercept=FALSE}), or additionally multiplied by the
+    corresponding intercept (\code{intercept=TRUE}). The latter only
+    makes sense if there are no further (non-centered)
+    covariates/offsets in the component.}
   \item{matplot.args}{list of line style specifications passed to
     \code{\link{matplot}}, e.g., \code{lty}, \code{lwd}, \code{col}.}
   \item{refline.args}{list of line style specifications passed to
@@ -230,12 +236,12 @@ measlesFit <- hhh4(measlesWeserEms, measlesModel)
 ## fitted values for a single unit
 plot(measlesFit, units=2)
 
-## seasonality plot
+## plot the multiplicative effect of seasonality
 plot(measlesFit, type="season")
 
 ## dominant eigenvalue of the Lambda matrix (cf. Held and Paul, 2012)
-getMaxEV_season(measlesFit)$maxEV.const  # here simply exp(AR intercept)
-plot(measlesFit, type="maxEV")  # not very exciting here since constant
+getMaxEV(measlesFit)  # here simply constant and equal to exp(ar.1)
+plot(measlesFit, type="maxEV")  # not very exciting
 
 ## random intercepts of the endemic component
 plot(measlesFit, type="ri", component="end")
